--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "keywords": [
     "phpcs",
     "standards",
+    "wordpress",
     "eventespresso"
   ],
   "license": "MIT",
@@ -21,6 +22,7 @@
   "require": {
     "php": ">=5.4",
     "squizlabs/php_codesniffer": "^3.2.0",
+    "wp-coding-standards/wpcs": "~0.14.0",
     "wimg/php-compatibility": "^8.1.0"
   },
   "suggest" : {
@@ -28,7 +30,7 @@
   },
   "scripts": {
     "config-set" : [
-      "vendor/bin/phpcs --config-set installed_paths ../../..,../../../vendor/wimg/php-compatibility",
+      "vendor/bin/phpcs --config-set installed_paths ../../..,../../../vendor/wp-coding-standards/wpcs,../../../vendor/wimg/php-compatibility",
       "vendor/bin/phpcs --config-set default_standard EventEspresso"
     ],
     "post-install-cmd": "composer config-set",
