--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,16 @@
   },
   "require": {
     "php": ">=5.5",
-    "squizlabs/php_codesniffer": "^3.2.0",
-    "wp-coding-standards/wpcs": "~0.14.0",
-    "wimg/php-compatibility": "^8.1.0"
+    "squizlabs/php_codesniffer": "3.*",
+    "wimg/php-compatibility": "9.3.5",
+    "wp-coding-standards/wpcs": "2.3.0"
   },
   "suggest" : {
     "dealerdirect/phpcodesniffer-composer-installer": "^0.4.3"
   },
   "scripts": {
     "config-set" : [
-      "vendor/bin/phpcs --config-set installed_paths ../../..,../../../vendor/wp-coding-standards/wpcs,../../../vendor/wimg/php-compatibility",
+      "vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/wimg/php-compatibility",
       "vendor/bin/phpcs --config-set default_standard EventEspresso"
     ],
     "post-install-cmd": "composer config-set",
