--- a/composer.json
+++ b/composer.json
@@ -15,21 +15,21 @@
       "homepage": "https://eventespresso.com"
     }
   ],
-  "type" : "phpcodesniffer-standard",
+  "type": "phpcodesniffer-standard",
   "support": {
     "issues": "https://github.com/eventespresso/ee-coding-standards/issues"
   },
   "require": {
     "php": ">=5.5",
     "squizlabs/php_codesniffer": "3.*",
-    "wimg/php-compatibility": "9.3.5",
+    "phpcompatibility/php-compatibility": "9.3.5",
     "wp-coding-standards/wpcs": "2.3.0"
   },
-  "suggest" : {
+  "suggest": {
     "dealerdirect/phpcodesniffer-composer-installer": "^0.4.3"
   },
   "scripts": {
-    "config-set" : [
+    "config-set": [
       "vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/wimg/php-compatibility",
       "vendor/bin/phpcs --config-set default_standard EventEspresso"
     ],
