--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
   },
   "scripts": {
     "config-set": [
-      "vendor/bin/phpcs --config-set installed_paths ../../eventespresso/ee-coding-standards, ../../wp-coding-standards/wpcs, ../../phpcompatibility/php-compatibility",
-      "vendor/bin/phpcs --config-set default_standard EventEspresso"
+      "\"vendor/bin/phpcs\" --config-set installed_paths ../../eventespresso/ee-coding-standards",
+      "\"vendor/bin/phpcs\" --config-set default_standard EventEspresso"
     ],
     "post-install-cmd": "composer config-set",
     "post-update-cmd": "composer config-set"
