--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
   "require": {
     "php": ">=7.1",
     "squizlabs/php_codesniffer": "3.*",
-    "phpcompatibility/php-compatibility": "9.3.5",
-    "wp-coding-standards/wpcs": "2.3.0"
+    "phpcompatibility/php-compatibility": "9.*",
+    "phpcompatibility/phpcompatibility-wp": "2.*",
+    "wp-coding-standards/wpcs": "2.*"
   },
   "suggest": {
     "dealerdirect/phpcodesniffer-composer-installer": "^0.4.3"
